force-app/main/default/objects/SAP_Order__c/SAP_Order__c.object-meta.xml
<CustomObject>
    <description>CPQ : Captures SAP Orders from SAP/EMS through integration</description>
    <label>SAP Order</label>
    <nameField>
        <label>SAP Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>