force-app/main/default/objects/SAP_Order__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <label>Condition Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>