force-app/main/default/objects/SAP_Order__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>SAP Orders</relationshipLabel>
    <relationshipName>SAP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>