force-app/main/default/objects/SAP_Order__c/fields/ENTITL_EXT_ID__c.field-meta.xml
<CustomField>
    <fullName>ENTITL_EXT_ID__c</fullName>
    <externalId>true</externalId>
    <label>ENTITL EXT ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>