force-app/main/default/objects/SAP_Order__c/fields/Entitlement_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Processing_Status__c</fullName>
    <description>This field is used in Service Cloud to Log the processing status for Entitlements.</description>
    <inlineHelpText>Service Cloud field to Log the processing status for Entitlements.</inlineHelpText>
    <label>Service Entitlement Processing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>