force-app/main/default/objects/SAP_Order__c/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>