force-app/main/default/objects/SAP_Order__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>