force-app/main/default/objects/SAP_Order__c/fields/Hardware_PAK_ID__c.field-meta.xml
<CustomField>
    <fullName>Hardware_PAK_ID__c</fullName>
    <label>Hardware PAK ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>