force-app/main/default/objects/SAP_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SAP Orders</relationshipLabel>
    <relationshipName>SAP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>