force-app/main/default/objects/SAP_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>ZOR - Standard, ZSO - Sample, ZMRS - MRS Internal, ZRMA - Return</description>
    <inlineHelpText>ZOR - Standard, ZSO - Sample, ZMRS - MRS Internal, ZRMA - Return</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZOR</fullName>
            </value>
            <value>
                <fullName>ZSO</fullName>
            </value>
            <value>
                <fullName>ZMRS</fullName>
            </value>
            <value>
                <fullName>ZRMA</fullName>
            </value>
            <value>
                <fullName>ZDO</fullName>
            </value>
            <value>
                <fullName>ZKB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>