force-app/main/default/objects/SAP_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SAP Orders</relationshipLabel>
    <relationshipName>SAP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>