force-app/main/default/objects/SAP_Order__c/fields/Product_End_Customer_Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_End_Customer_Contact_Text__c</fullName>
    <label>Product End Customer Contact Text</label>
    <length>15</length>
    <type>Text</type>
</CustomField>