force-app/main/default/objects/SAP_Order__c/fields/Renewed_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Entitlement_ID__c</fullName>
    <label>Renewed Entitlement ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>