force-app/main/default/objects/SAP_Order__c/fields/Renewed_PAK_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewed_PAK_ID__c</fullName>
    <label>Renewed PAK ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>