force-app/main/default/objects/SAP_Order__c/fields/Reseller_Account__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SAP Orders (Reseller Account)</relationshipLabel>
    <relationshipName>SAP_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>