force-app/main/default/objects/SAP_Order__c/fields/Reseller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SAP Orders (Reseller Contact)</relationshipLabel>
    <relationshipName>SAP_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>