force-app/main/default/objects/SAP_Order__c/fields/Reseller_Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Text__c</fullName>
    <label>Reseller Contact Text</label>
    <length>15</length>
    <type>Text</type>
</CustomField>