force-app/main/default/objects/SAP_Order__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <label>Sales Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>