force-app/main/default/objects/SAP_Order__c/fields/SAP_Account__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account__c</fullName>
    <label>SAP Account</label>
    <length>15</length>
    <type>Text</type>
</CustomField>