force-app/main/default/objects/SAP_Order__c/fields/SAP_Delivery__c.field-meta.xml
<CustomField>
    <fullName>SAP_Delivery__c</fullName>
    <label>SAP Delivery</label>
    <length>25</length>
    <type>Text</type>
</CustomField>