force-app/main/default/objects/SAP_Order__c/fields/SAP_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Order_Number__c</fullName>
    <label>SAP Sales Order Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>