force-app/main/default/objects/SAP_Order__c/fields/SAP_Update_Required__c.field-meta.xml
<CustomField>
    <fullName>SAP_Update_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Update Required</label>
    <type>Checkbox</type>
</CustomField>