force-app/main/default/objects/SAP_Order__c/fields/Serial_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Serial_Entitlement_ID__c</fullName>
    <label>Serial Entitlement ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>