force-app/main/default/objects/SAP_Order__c/fields/SFDC_Account__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SAP Orders</relationshipLabel>
    <relationshipName>SAP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>