force-app/main/default/objects/SAP_Order__c/fields/SFDC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SAP Orders (SFDC Opportunity)</relationshipLabel>
    <relationshipName>SAP_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>