force-app/main/default/objects/SAP_Order__c/fields/SFDC_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>SAP Orders</relationshipLabel>
    <relationshipName>SAP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>