force-app/main/default/objects/SAP_Order__c/fields/SFDC_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Quote_Number__c</fullName>
    <label>SFDC Quote Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>