force-app/main/default/objects/SAP_Order__c/fields/Sold_To_Partner__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Partner__c</fullName>
    <label>Sold To Partner</label>
    <length>10</length>
    <type>Text</type>
</CustomField>