force-app/main/default/objects/SAP_Order__c/fields/Sold_To_Partner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Partner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Partner Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SAP Orders (Sold To Partner Lookup)</relationshipLabel>
    <relationshipName>SAP_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>