force-app/main/default/objects/SAP_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Processed is for Quote Line/Renewals to avoid record locks, Synced means record has been successfully completed, Error is error</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>