force-app/main/default/objects/SAP_Order__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <label>Subscription ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>