force-app/main/default/objects/SAP_Order__c/fields/Synced_with_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Synced_with_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is to indicate whether SAP Order is synced with Entitlement or not.</description>
    <inlineHelpText>Check this checkbox to sync SAP Order with Entitlement.</inlineHelpText>
    <label>Synced with ServiceCloud Entitlement</label>
    <type>Checkbox</type>
</CustomField>