force-app/main/default/objects/SAP_Order__c/fields/VAR__c.field-meta.xml
<CustomField>
    <fullName>VAR__c</fullName>
    <label>VAR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>