force-app/main/default/objects/SAP_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAP_PAK_ID__c</columns>
    <columns>Sales_Type__c</columns>
    <columns>Contract__c</columns>
    <columns>Hardware_Serial_Number__c</columns>
    <columns>Product_SKU__c</columns>
    <columns>Entitlement_Type__c</columns>
    <columns>SAP_Delivery__c</columns>
    <columns>SAP_Account__c</columns>
    <columns>Sold_To_Partner__c</columns>
    <columns>VAR__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Entitlement_Processing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/30/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/15/2019 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>