force-app/main/default/objects/SAP_Order__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Order_Type__c</columns>
    <columns>SAP_PAK_ID__c</columns>
    <columns>Contract__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Customer_Classification__c</columns>
    <columns>Description__c</columns>
    <columns>End_Date__c</columns>
    <columns>Entitlement_ID__c</columns>
    <columns>Entitlement_Type__c</columns>
    <columns>SAP_Delivery__c</columns>
    <columns>Status__c</columns>
    <columns>Changed_Date__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>5/5/2021 12:00 AM</value>
    </filters>
    <label>Created Today</label>
    <language>en_US</language>
</ListView>