force-app/main/default/objects/SAP_Order__c/listViews/SAP_Orders_in_Error.listView-meta.xml
<ListView>
    <fullName>SAP_Orders_in_Error</fullName>
    <columns>NAME</columns>
    <columns>SAP_PAK_ID__c</columns>
    <columns>Product_SKU__c</columns>
    <columns>SAP_Account__c</columns>
    <columns>Sold_To_Partner__c</columns>
    <columns>VAR__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SAP_Sales_Order_Number__c</columns>
    <columns>Error_Log__c</columns>
    <columns>Hardware_Serial_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/30/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>SAP Orders in Error</label>
    <language>en_US</language>
</ListView>